--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
 configurations {
+
 	compileOnly {
 		extendsFrom annotationProcessor
 	}
@@ -28,6 +29,9 @@ dependencies {
 	//jsp
 	implementation 'javax.servlet:jstl'
 	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
+
+	// https://mvnrepository.com/artifact/org.webjars.bower/jquery
+	implementation group: 'org.webjars.bower', name: 'jquery', version: '3.2.1'
 
 	//lombok
 	compileOnly 'org.projectlombok:lombok'
