--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,14 @@ server.port=8081
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
-#driver ?? ??
+#driver
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/boardpractice?characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=infotech@30
 
-#mapper.xml ?? ??
+#mapper.xml directory
 mybatis.mapper-locations= mapper/*.xml
 
-#resultType ?? ? class??? ??? ??
+#resultType
 mybatis.type-aliases-package=com.example.boardPractice.board.model.vo
