--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,8 @@ dependencies {
 
 	//mybatis, mariadb
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
-	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+    implementation 'junit:junit:4.13.1'
+    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 
 	//jsp
 	implementation 'javax.servlet:jstl'
